--- a/writings/loot.tex
+++ b/writings/loot.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{booktabs,siunitx,tabularx, natbib}
 \usepackage[dvipdfmx]{hyperref}
+\usepackage{comment}
 
 \bibliographystyle{jecon}
 \bibpunct[:]{(}{)}{,}{a}{}{,}
@@ -15,6 +16,9 @@
 
 % 概要
 \input intro.tex
+% レビュー(2章)
+\input review.tex
 
+\newpage
 \bibliography{reference}
 \end{document}
