--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -48,6 +48,35 @@
                analysis; North America; United States"
 }
 
+@BOOK{Jones2005-bp,
+  title     = "The Politics of Attention: How Government Prioritizes Problems",
+  author    = "Jones, Bryan D and Baumgartner, Frank R",
+  abstract  = "On any given day, policymakers are required to address a
+               multitude of problems and make decisions about a variety of
+               issues, from the economy and education to health care and
+               defense. This has been true for years, but until now no studies
+               have been conducted on how politicians manage the flood of
+               information from a wide range of sources. How do they interpret
+               and respond to such inundation? Which issues do they pay
+               attention to and why? Bryan D. Jones and Frank R. Baumgartner
+               answer these questions on decision-making processes and
+               prioritization in The Politics of Attention. Analyzing fifty
+               years of data, Jones and Baumgartner's book is the first study
+               of American politics based on a new information-processing
+               perspective. The authors bring together the allocation of
+               attention and the operation of governing institutions into a
+               single model that traces public policies, public and media
+               attention to them, and governmental decisions across multiple
+               institutions. The Politics of Attention offers a groundbreaking
+               approach to American politics based on the responses of
+               policymakers to the flow of information. It asks how the system
+               solves, or fails to solve, problems rather than looking to how
+               individual preferences are realized through political action.",
+  publisher = "University of Chicago Press",
+  month     =  oct,
+  year      =  2005,
+  language  = "en"
+}
 
 @BOOK{Aldrich1995-xf,
   title     = "Why Parties?: The Origin and Transformation of Political Parties
@@ -162,7 +191,7 @@
   year      =  2019
 }
 
-@BOOK{Baumgartner2020-ee,
+@BOOK{Baumgartner2015-ee,
   title     = "The Politics of Information",
   author    = "Baumgartner, Frank R and Jones, Bryan D",
   abstract  = "How does the government decide what's a problem and what isn't?
@@ -192,8 +221,7 @@
                again deepen our understanding of the dynamics of American
                policy making.",
   publisher = "University of Chicago Press",
-  month     =  dec,
-  year      =  2020,
+  year      =  2015,
   keywords  = "public policy; government; legislation; welfare; intervention;
                congress; problems; policymaking; partisan control; presidential
                leadership; opinion; information management; society; senate;
@@ -204,6 +232,7 @@
                complexity; censorship; budget; nonfiction; history; politics",
   language  = "en"
 }
+
 
 @BOOK{Baumgartner1993-bc,
   title     = "Agendas and Instability in American Politics",
@@ -285,6 +314,69 @@
   pages     = "741--773",
   month     =  oct,
   year      =  2013
+}
+
+@BOOK{Binder2003-bn,
+  title     = "Stalemate: Causes and Consequences of Legislative Gridlock",
+  author    = "Binder, Sarah A",
+  abstract  = "Gridlock is not a modern legislative condition. Although the
+               term is said to have entered the American political lexicon
+               after the 1980 elections, Alexander Hamilton complained about it
+               more than two hundred years ago. In many ways, stalemate seems
+               endemic to American politics. Constitutional skeptics even
+               suggest that the framers intentionally designed the Constitution
+               to guarantee gridlock. In Stalemate, Sarah Binder examines the
+               causes and consequences of gridlock, focusing on the ability of
+               Congress to broach and secure policy compromise on significant
+               national issues. Reviewing more than fifty years of legislative
+               history, Binder measures the frequency of deadlock during that
+               time and offers concrete advice for policymakers interested in
+               improving the institutional capacity of Congress. Binder begins
+               by revisiting the notion of ``framers' intent,'' investigating
+               whether gridlock was the preferred outcome of those who designed
+               the American system of separated powers. Her research suggests
+               that frequent policy gridlock might instead be an unintended
+               consequence of constitutional design. Next, she explores the
+               ways in which elections and institutions together shape the
+               capacity of Congress and the president to make public law. She
+               examines two facets of its institutional evolution: the
+               emergence of the Senate as a coequal legislative partner of the
+               House and the insertion of political parties into a legislative
+               arena originally devoid of parties. Finally, she offers a new
+               empirical approach for testing accounts of policy stalemate
+               during the decades since World War II. These measurements reveal
+               patterns in legislative performance during the second half of
+               the twentieth century, showing the frequency of policy deadlock
+               and the legislative stages at which it has most often emerged in
+               the postwar period. Binder uses the new measure of stalemate to
+               explain empirical patterns in the frequency of gridlock. The
+               results weave together the effects of institutions and elections
+               and place in perspective the impact of divided government on
+               legislative performance. The conclusion addresses the
+               consequences of legislative stalemate, assessing whether and to
+               what degree deadlock might affect electoral fortunes, political
+               ambitions, and institutional reputations of legislators and
+               presidents. The results suggest that recurring episodes of
+               stalemate pose a dilemma for legislators and others who care
+               about the institutional standing and capacity of Congress.
+               Binder encourages scholars, political observers, and lawmakers
+               to consider modest reforms that could have strong and salutary
+               effects on the institutional standing and legitimacy of Congress
+               and the president.",
+  publisher = "Brookings Institution Press",
+  year      =  2003,
+  language  = "en"
+}
+
+@INCOLLECTION{Binder2017-wr,
+  title     = "Polarized We Govern?",
+  booktitle = "Governing in a Polarized Age: Elections, Parties, and Political
+               Representation in America",
+  author    = "Binder, Sarah",
+  editor    = "Gerber, Alan S and Schickler, Eric",
+  publisher = "Cambridge University Press",
+  pages     = "223--242",
+  year      =  2017
 }
 
 @BOOK{Birkland1997-lq,
