--- a/writings/intro.tex
+++ b/writings/intro.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{はじめに}
 　アメリカの議会はしばしば「世界最強」の議会\citep*{2004-cr}と言われ、憲法上立法を担う集団として多くの分析が蓄積されてきた。連邦議会はアメリカ政治において最も重要なアクターのひとつであり、その決定は政治的・社会的に大きな意味を持つ。\\
 　しかしながら、近年アメリカ議会は分極化の影響を受け、その機能を十分に発揮していないとする議論もある。民主党と共和党が鋭く対立し、議会における法案審議が停滞するといった手詰まりの状態(gridlock)が問題視され、議会が十分に立法機能を果たすことが困難になっているとも指摘される\footnote{議会審議が行き詰まることによって、重要な法案の審議が進まない「立法生産性」の低下がもたらされているかについては議論の余地がある。\citep*{}しかしながら、議会において法案審議がかつてのように議案ごとに審議と票読みを行い、多数派形成を都度行うといった法案審議・議決過程が行われなくなり、より固定的な投票行動が観察されるようになってきていることは事実である。\citep*{Poole2017-ir,Layman2006-tg}}。\\
@@ -11,88 +12,13 @@
 　第3の方策として、議会が立法活動にどの程度従事しているのかという機能の面に着目した議論がなされている。\citet*{Mayhew1991-rq,Mayhew2005-or}の\textit{Divided We Govern}を画期として蓄積されてきたこの議論は、議会が立法生産にどの程度寄与しているのかを論じることで、議会が社会を代表するという働きをどの程度達成できているのかを論じている。近年のイデオロギー的分極化を受けて、議会がこう着状態や機能不全に陥っているという指摘もなされており、現代の議会を考える上で重要な論点と言える。\\
 　以下では、3つの枠組みについてより具体的に検討したのち、本論での問題関心を提示し、議論の全体像を概観する。\\
 
-\subsubsection{政策的位置の推定と代表}
-　議会において、いかなる法律が制定されているのかを問うことは議会研究にとって極めて重要な問題関心であった。この関心に対する最も単純な解答は、議会に提出される、もしくは可決された法案の具体的内容を検討するというものである。この方策は主に政策史研究において用いられ、個別の法案や立法の内容を適切に把握することができるという面で優位性を持つ。\\
-　しかし、議会研究の中でこの方策が取られることは非常に少ない。その理由の一つは、少なくとも80年代以降のアメリカ議会研究が、個々の事例における過程ではなく、複数の事例に見られる傾向に重点を置いてきたことに求められるだろう。この全体の傾向を把握するという志向を有する研究にとって、個別の法案を逐一検討していくことはほとんど不可能であった。\\
-　こうした課題を克服するひとつのアプローチが「政策的理想点」の推定である。\\
-　理想点を推定することによって、\\
+\subsubsection{選挙区の代表者である議員の集合体としての議会}
+　連邦議会とアメリカ社会との関係性を論じる際に最も単純な発想は議員と選挙区との関係を論じるというものだろう。議員と選挙区の有権者との関係性に着目する議論は\citet*{Fenno2000-up}に代表されるような「何が起きているのか」を記述するものから、選挙区民の関心と議員の行動との関係を分析するものまで数多く存在する。\\
+　研究紹介\\
+　こうした議員と選挙区との関係性に着目する議論の課題は、両者の関係性が結果として何をもたらすのかが不明瞭な点にある。現在のより分極化し、政党の役割が拡大した議会において、議員個人の点呼投票や法案提出の傾向、審議の仕方、有権者への語り方といった関係性のあり方を分析することは議会と社会との関係を論じることを意味しない。議会の法案審議のあり方は、個々の議員が法案にいかに向き合っているかの合算では十分に説明できない程度に、党派間の対立と凝集性の向上、政党指導部や各委員会委員長などの権限は拡大していると思われる。\\
+　どのように法案審議が行われ、立法成果が達成されているのかを議論するためには、議員個人と選挙区との関係性に加えて、議会全体がいかに振る舞っているのかという点も分析する必要があると考えられる。\\
 
-\subsubsection{議員/有権者関係としての代表}
+\subsubsection{政党間競争としての議会}
 
-\subsubsection{機能する議会としての代表}
-
-
-\subsection{代表と機能}
-　本論は議会の機能と社会への応答性に主たる関心を有する。これは、議会が実際にいかなる法案を審議し、立法しているのかという問題を抜きにして議会の代表性を論じることは不可能であると考えるからである。\\
-　加えて、議会審議の内容は個別議員や政党が所与に有する政策的立場やその分布と権力関係によって決定されると考えるのではなく、有権者やメディアなどといった議会を取り巻くさまざまな社会的要因によって規定されるというモデルを採用する\footnote{これは政策選好が全く効果を持たないということではなく、政策選好よりも重要な要素が存在しているのではないかということである。}。従来の議会研究の多くは、議員個々人が政策選好を有しており、選挙などによって生じる政策選好分布の変化によってのみ既存の法律が変更されるというモデルによって議会の法案審議を論じている。\citep*{Poole2017-ir,Krehbiel1998-ob,Cox2005-pn,Cox2007-xq,Aldrich1995-xf}しかし、こうした所与の政策選好分布と権力構図との組み合わせによって議会の法案審議を論じることにはいくつかの重要な問題が存在すると思われる。\\
-　第一に、法案の初出と法律化とのズレの問題である。議会に提出される法案の多くは、初めて議会に提出されるものではなく、すでに複数の議会期で提出されたことのある内容の法案が形を変えながら再度提出されている。すなわち、提出されても法律化される場合とそうでない場合とが存在するということである。政策選好が法案審議の主たる説明要因であるとすれば、複数回法案が提出される間に少なくない数の議員構成の変化が生じる必要がある。\\
-　しかし、実際には法案が複数回提出される間に必ずしも一定以上の構成員の変化が生じているとは考えにくい。各議会期において一定数の法案が審議され、可決されているのであり、可決されたものとされなかったものを「現状打開点」\citep*{Tsebelis2009-hf}に特定の会期のみ入ったとは考えにくい。そもそも、同じ議会期にほとんど同内容の法案が複数回提出される場合すらある。政策選好によって議決結果が決定されるとすれば、これは荒唐無稽な行動と言わざるを得ない。\\
-　こうした問題を政策選好によって解決するために必要となるのが、政策選好の変化である。\citet*{Poole2017-ir}が論じるように、個々の議員が有する政策選好の理想点は時期によって異なっており、既存の理想点推定の手法はこうした変化に何らかの形で応答しているといえる\footnote{\citet*{Poole2017-ir}は理想点の変化を線形にモデル化しているが、ベイズ推定による事前分布設定を行うIRTを利用することでより柔軟な推定が可能であるとも指摘されている。\citep*{Caughey2016-ef}}。政策選好が時期によって変化するという枠組みを採用することで、異なる時期に異なる政治的判断を下すという現象を説明可能になる。\\
-　他方で、政策選好の変化という枠組みは政策選好によって議決や法案提出といった議会における審議パターンを説明する利点を損なう側面を有する。政策選好によって議会の審議過程を説明し、付加的に手続きや規則による制約、政党の権限などを条件付けするという分析枠組みは、議員個人の政策選好が一定程度固定的である場合に意味を持つ。「保守的な議員が多い場合に保守的な法案が通りやすい」「保守的な議員が多くとも委員長をリベラルな議員が占めている場合には保守的な法案が通りにくい」といった説明は、保守/リベラルという政策選好が一定程度頑健である場合には意味を持つ。しかし、保守/リベラルという政策選好が場合によって、また異なる状況下で大きく変化するとしたら、そうした変数によって審議過程を説明することにどのような意味があるだろうか。\\
-　こうした可変的な政策選好を推定することは、予測の面では大きな意味を有する。推定に対して一定の揺らぎを読み込むことは、未知の投票に対して議会がどのような応答をし得るかという問題に回答するためには、その説明能力を向上させるという意味で重要な役割を有する。\\
-　他方で、イデオロギー尺度による、もしくはそれに制度的機構や権力分布を条件付けた法案審議の説明モデルは結局のところ、根本的な課題を克服できていない。「なぜ法案は何度も提出され、タイミングによってその成否が異なるのか」という問題は、イデオロギー尺度を説明変数とするモデルでは回答しにくい。\\
-
-\subsection{説明変数として社会と注目度の概念}
-　本論の第一の主張は、「議会における法案審議を論じる上で、政策領域に対する社会的な注目度合いが重要な変数である」というものである。こうした議論は、イデオロギー尺度を主軸とする議論に比べれば数は少ないものの、一定以上の蓄積が存在する。\\
-　本論が、既存の政策領域への注目度と法案審議との関係を論じた多くの研究と明確に異なるのは、「政策領域への注目度は法案審議に対して負の影響を与えうる」という点であり、これが本論の第二の主張である。以下では、政策領域への注目度と立法過程との関係を論じてきた3つの議論を概観した上で、政策領域が注目されることによる負の側面の重要性を指摘する。\\
-
-\subsubsection{政策変化をもたらす「注目」}
-　政策領域への注目度を扱った分析として古典的なものは\citet*{Kingdon1984-oq}の「３つの流れモデル(Multiple Stream Framework)」\footnote{\citet*{Kingdon1984-oq}が\textit{Agendas, alternatives, and public policies}の中で論じた政策変化をもたらす過程の議論にKingdon本人は明確な呼称を与えていない。本邦では「政策の窓モデル」などの呼称が一般的であるが、ヨーロッパ諸国などの適用においては\citet*{Zahariadis2003-ck}の用いた"Multiple Stream Framework(MSF)"の呼称が一般的であり、レビュー論文や教科書などでもこの呼称が用いられている。また、研究史上も政策のライフサイクル論に対して複数の流れの複合体として政策変化を論じた点にKingdonによる議論の重要性があるとの判断から本論では「3つの流れモデル」と表記する。}であろう。\citet*{Kingdon1984-oq, Kingdon2013-ac}は、組織的意思決定のゴミ缶モデル\citep*{Cohen1972-ym}を応用した大統領府の分析を通じて政策変化をもたらす要因を論じた。「3つの流れモデル」は、政策変化をもたらす過程を「問題の流れ」「政策の流れ」「政治の流れ」という3つの異なる相互に独立した過程の混合物として捉え、これらが合流することによって政策変化が生じる契機がもたらされるとする。この契機を「政策の窓」と呼び、3つの流れを合流させて契機をもたらし、それを掴んで政策的な変化をもたらすためには、政策企業家(policy entrepreneur)が重要な役割を果たすと論じられる。\citep*{Kingdon1984-oq,Kingdon2013-ac}\\
-　このようなMSFモデルは、政策変化を説明するモデルとして有効であるとされ、議院内閣制の国における政策過程を含めた広い適用対象を包含するモデルとして様々な政策過程の分析において応用されてきた。\citep*{Rawat2016-ew,Jones2016-lc}\\
-　しかしながら、MSFモデルはその予測可能性の低さ\citep*{}や概念整理が不十分である\citep*{John2018-im}などの点から批判されてきた。MSFモデルは政策過程をめぐる極めて複雑な問題状況を整理する補助線を提供するという意味で極めて重要な貢献を果たした一方で、「3つの流れ」とされる概念間には十分な対応関係は存在せず、それぞれの流れが具体的にいかなる要素を内包しているのかも判然としない。MSFモデルを実際に用いた多くの分析において、概念や操作化に一貫性がない\citep*{Jones2016-lc}ことも、このモデルが原因と結果の関係を論じるというよりむしろ、問題状況の整理と認識のための枠組みという側面が強いことを示している。\\
-　こうした課題に対応する議論として、JonesとBaumgartnerによる一連の研究\citep*{Baumgartner2010-rl,Baumgartner2020-ee, Baumgartner2009-eb}は政策変化の過程において一定期間の安定性と短期の急激な変動という特徴が存在することを指摘し、そうした現象が生じる要因を分析している。Baumgartnerらによる一連の研究は、政策変化が基本的に生じにくいものであるという前提を引き継ぎつつ、それが大きなインパクトを伴って\\
-
-\subsubsection{議会内政党}
-　議員の構図を重視するKrehbielらの議論に対して、議会内政党が議会の法案審議や議決に関して重要な役割を果たしてきたとする議論も存在する。\citep*{Cox2005-pn,Cox2007-xq,Rohde1991-da,Aldrich1995-xf}\\
-\subsection{議員行動と政党の役割}
-　特に近年の議会における審議過程をめぐる議論は、議会内政党がいかなる役割を果たしているのかに着目して検討がなされてきた。中でも議会内政党の役割については手続き上多数党が優位に立っている点が注目され、議案審議過程を多数政党が統制しているとする理解が提示されてきた。\citep*{Cox2005-pn,Cox2007-xq}\\
-　これに対して、少数政党の役割を強調する議論が近年提示されている。\citep*{Hughes2018-dj,Hughes2021-cp,Ballard2021-su}\\
-　少数政党の議会審議における重要性を指摘する一連の研究は、議会で何が審議され、どのような法案が通過するかを説明する上で極めて重要な示唆を与えている。\\
-　他方で議会内政党に注目する分析は、議会内部の権限配置や資源の多寡に焦点を据える傾向にあり、それ以外の要因を分析の視角に捉えきれていないといえる。大別すると2つの問題点が指摘できる。第1には、議員行動を所与の選好に基礎付けられたものとして説明することは困難である。第2には、議員個人と議会指導部との戦略的な動機は必ずしも一致するとは言えない。\\
-　第1の点について、議員が議会で法案を審議・議決する際に、自らの選好にしたがって独立に法案への賛否や政党指導部への支持を決定しているとする前提は適切でない。このように議員の独立性を強調し、所与の選好をもって議員行動を説明する立場は、議員が選挙で選出され、選挙区民を有するアクターであるという側面を過小評価するものであると考えられる。\citet*{Fenno1977-se,Fenno2000-up}は選挙区における議員の行動を分析する中で、下院議員が選挙区民からの信頼を獲得するために取る方策には複数種類のアプローチが存在することを指摘している。そして、政策的立ち位置を重視するタイプの政治家が点呼投票などの形で表明した政策選好が選挙区民の利益につながるという説明を必要とするだけではなく、個人的なつながりや個人のパーソナリティを重視する議員においても、背いてはならない政策選好が存在することが指摘される。\citep*{Fenno2000-up}\\
-　このように有権者の反応を重視する議員の在り方は、所与の選好を有する議員という仮定と齟齬をきたしうる。議員における所与の選好と選挙区民の政策選好を重視する議員というモデルを整合させるためには、選挙区民の政策選好と議員への評価は議会期毎にしか更新されないという仮定が必要である。この仮定が妥当であるとすれば多くの議員が度々選挙区に足を運び、選挙区民と交流することや、議員が恒常的に自らの政策的立場や立法成果を広報などの形で選挙区民などの有権者に対して表明することを説明できない。議員が審判を受けるのが選挙のタイミングだけであるならば、そのような行為が必要になるのは選挙サイクルのタイミングだけである。\\
-　実際には、議員の行動はむしろ政策的立場を有権者との交流を通じて更新し続ける存在であると想定すべきだろう。
-　第2の点について、一般議員と政党指導部の間に生じる緊張関係を検討する必要があるだろう。例えば\citet*{Cox2005-pn,Cox2007-xq}は議会内政党の行動戦略を「多数政党の多数派が望まない法案の排除」として定式化しているが、この戦略は多数政党内の少数派議員の選好を犠牲にして、多数派の政策的利益を実現することを意味している。\citep*{}また、\citet*{Ballard2021-su}が論じるような党内の強制力と立法生産性への意欲といった説明変数は、なぜ政党内の強制力が成立するのかを全く説明しない。これらは与えられた法案に対して自明に生成されるのではなく、議員個人の選択の結果として生じる帰結であるに過ぎない。\\
-　実証的にみても、議員行動の集合としての立法活動は所与の選好にしたがった一般議員と議会指導部の関係や議会と大統領との政策選好における関係だけに還元できるものではなく、議会と世論やメディアなどの公共空間との関係から理解されるべきものである。\\
-
-　JonesとBaumgartnerによる一連の分析\citep*{Baumgartner2010-rl, Baumgartner2009-eb,Baumgartner2020-ee}は政策変化の容態を描き出す上で非常に有益な枠組みを提示した。\citet*{Baumgartner2010-rl}は政策が強い固着性を持ち、一定期間の安定性と突然の急激な変化によって特徴づけられることを指摘した。こうした現象が生じるメカニズムとして、安定性を持った政策領域に新しい対立の観点がもたらされ、それが政治空間全体に広がることによって急激で大規模な変化が生じると論じた。\citep*{Baumgartner2010-rl}このような過程として政策変化を論じる見方は断続均衡理論として知られ、政策変化に対する重要な見方として位置付けられている。\citep*{Howlett2009-tn,John2018-im}\\
-　しかしながら、断続均衡理論は「なぜ政策は変化するのか」に対する回答を提示するものの、「特定のタイミングで、なぜ特定の政策のみが重要な争点となり、変化をもたらすのか」という問題に対して十分な回答をもたらしたとは言えない。\citep*{John2018-im}この点をめぐり、さまざまな視座から検討がなされてきた。これらは大別すると、外性的要因による説明と内生的要因による説明とに分類することができる。外性的要因に着目する分析では、自然災害などの焦点となる要因によって特定の政策領域に注目が集まるとする議論\citep*{Birkland1997-lq,Birkland1998-xp}、外性的要因が政治的連合の変化\citep*{Sabatier1993-id}や有権者の関心の変化\citep*{Bertelli2013-zq}をもたらすことで特定の政策領域が注目されるとする議論などがある。内生的要因に着目する議論としては知識の更新によって政治的状況の変化を説明する議論\citep*{Baumgartner2010-rl}などが存在している。\\
-　このように、どの政策領域が注目を集めるのかという問題は、多くの理論的立場が存在するものの、経験的な知見は十分に蓄積されてきたとは言い難い。Comparative Agendas Projectはこれらの課題に対して、複数国の比較を可能とするデータセットを構築した点で重要な貢献であるが、このデータを用いて、特定の政策領域で注目が形成される要因についての分析は十分になされてきたとは言えない。\\
-　本稿では、議会という政策過程が展開する特定のフィールドに焦点を当て、議会における政策的な注目が形成される要因を分析することを通じて、「法案が重要な関心をもたれる」という現象がいかなる要因によってもたらされてきたかを分析する。\\
-
-
-
-\section{問題状況}
-\subsection{Policy Process \& Focus Point}
-　政策変化がいかにもたらされるかについては、多くの先行研究がその要因を分析してきた。古典的研究とし
-
-\subsection{制度間差異の重要性}
-　ではなぜ、政策変化の分析を行う上で制度間差異が重要なのだろうか。断続均衡理論の貢献は、異なる領域における現象を政策変化という側面から切り出すことによって、共通の構造が存在していることを指摘した点にあると言える。これは、政策変化が展開する領域ごとの差異を捨象することによって共通のメカニズムを抽出する試みとして評価できる。\\
-　他方、裁判所や議会、大統領府、メディアなどといった異なる意思決定手続きを有する制度間の差異を捨象することは、各々の領域においてより具体的な現象に対する説明能力を低下させることを意味する。特に、意思決定手続きについての条件をモデルに組み込めないことは、政策変化の過程について、人間の認識など一般的に存在する制約以上の条件について論じることができないことを意味する。実際、\citep*{Baumgartner2010-rl}がモデルに組み込んでいる制約は人間の認知機能の限界に起因するものであり、例えば議会における法案のスケジュール管理権限など、個別具体的な領域における制度的建付はモデルに組み込まれていない。\\
-　このようなモデルの特徴は、複数国間の比較や議会と大統領などの異なる制度間における比較を行うという目的からすれば有益な特徴と言える。一方で、アメリカの政策過程などのように、単一の分析対象を目的とする分析においては必ずしも適切な枠組みとは言えない。\\
-　加えて、制度間差異を論じないことによる理論的な問題も生じていると考えられる。先述した通り、政策変化をもたらす「注目」の形成がいかにしてなされるのかについては十分に経験的知見が蓄積されているとは言い難い状況にある。これは、単に分析が困難であるということではなく、政策変化をもたらす具体的な過程が制度ごとの特性によって規定されていることによって、政策変化一般に観察される特徴が把握しにくいことに起因するのではないか。\\
-　異なる制度ごとに異なる意思決定手続きを有しているために、それぞれの領域において頻繁に観察される、政策変化の過程も異なるということは十分にありうると思われる。例えば、\citet*{Baumgartner1993-bc, Baumgartner2010-rl}の論じる政策的知識の更新とそれに伴って生じる政策変化というモデルは裁判所などのより専門性の高い意思決定手続きを有する集団における変化を説明するのに適していると考えられる。他方で、焦点となる出来事(focusing event)に着目し、その外性的インパクトを起点として政策の変化を論じるモデル\citep*{Birkland1997-lq, Birkland1998-xp,Sabatier1993-id,Bertelli2013-zq}などは議会や大統領などの有権者との関係に依存する制度の枠内でより効果を発揮するモデルであると考えられる。\\
-　政策変化は制度の固着性(stickyness)という側面に着目した場合に、断続均衡理論の提示するような類似の過程として認識するこができる一方で、そうした現象のもたらされ方については、制度の有する意思決定手続きの差異が重要な要因として機能していると考えられる。したがって、特定の政策領域が変化する要因を分析するためには、議会や裁判所、大統領府などといった異なる制度がいかなる過程を経て政策変化を生じさせているのかを論じる必要があると思われる。\\
-　以下では議会研究の知見を援用しつつ、政策に対する注目がいかなる条件のもとで形成されうるのか検討する。\\
-
-\subsection{議会における政策の「注目」}
-　アメリカ議会研究において、「法案が重要な関心をもたれる」という現象は議会内政党の役割を軸に議論が蓄積されてきた。ひとつの極にある議論はアメリカ議会に政党は存在しないとする立場であり、\citet*{Krehbiel2010-ob}の提唱したPivotal Politics論がその典型である。もうひとつの極には議会における政党指導部の役割を強調する議論が存在し、条件付き政党政府論(Conditional Party Government)\citep*{Rohde1991-da, Aldrich1995-xf}やカルテル政党論(Cartel Party Theory)\citep*{Cox2005-pn,Cox2007-xq}などの議論が存在してΩいる。\\
-　議会における政党の役割を重視しないPivotal Politics論では、議会における議決行動に着目し、審議の膠着状況(gridlock)が常にではないが恒常的に生じる現象と議決における過大連合の形成を拒否権と議事妨害(filibuster)とへの対抗に必要な議席数の幅から説明する。\citep*{Krehbiel2010-ob}\\
-　条件付き政党政府論は議会における政党の役割を、多数党の政党指導部が自らの政党の指示を得ている場合に、法案審議を推し進める権限を行使していると論じる。\\
-　カルテル政党論は、多数党の政党指導部が議会の議事手続きを管理することを通じて、議場で審議される内容を管理し、多数党の多数派が望まない法案が審議の俎上に上がることを防ぐ消極的なアジェンダ・コントロール権能(negative agenda control)を有していると指摘する。\citep*{Cox2005-pn}\\
-　このような政党の存在をめぐる理論的議論に対して、数多くの研究が経験的な知見により実証を試みてきた。分析結果については必ずしも一貫した結論が出ているとは言い難い\footnote{この点に関する経験的知見としては}ものの、特に近年の分極化した議会において政党指導部が議事手続きを通じて議会で論じられる政策争点をコントロールしていることは事実であろう。\citep*{Sinclair1997-jm, Sinclair2016-kh,Rosenthal2008-xb, Peters2010-ve}\\
-
-\section*{Theory}
-　本稿は、制度ごとの意思決定手続きにおける差異が、政策変化を説明する上で重要であると考える。この制度間差異は、政策変化の中でも注目が形成される容態に対して影響を与えると考えられる。
-　
-
-\section*{Hypothesis}
-
-\section*{Data \& Method}
-　分析には、
-
-\section*{Result}
-
-\section*{Discussion}
-
-\section*{Conclusion}
+\subsubsection{機能不全に陥る要因を探る議会研究}
+　連邦議会とアメリカ社会を検討する際の第3の枠組みが、議会がどんな仕事をしているのかについて分析することである。
