--- a/writing/main.tex
+++ b/writing/main.tex
@@ -1,8 +1,9 @@
-\documentclass{article}
+\documentclass[here]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{booktabs,siunitx,tabularx, natbib}
 \usepackage[dvipdfmx]{hyperref}
 \usepackage{comment}
+\usepackage{amsmath}
 
 \bibliographystyle{jecon}
 \bibpunct[:]{(}{)}{,}{a}{}{,}
@@ -57,17 +58,112 @@
 \section{分析方法}
 \subsection{データ}
 　分析に際しては、Comparative Agendas Project(CAP)によって収集・整理されたデータセットを利用する。\\
+
 \subsubsection{従属変数}
 　本稿の従属変数は、政策領域ごとの立法生産性である。実際の立法生産性の計測方法は様々にあり得るが、本分析では政策領域ごとに審議された法案の数を採用する。\\
 　CAPのデータセットには、議会に提出された法案をCAPの用いる政策領域ごとに分類したデータが公開されている。本分析では法案が提出された年に政策領域ごとの法案数を合算した値を従属変数として採用する。\\
-　加えて、法案審議に見られる様々な傾向は法案の審議段階によっても異なると考えられる。アメリカ連邦議会には、例年数千件から一万件近い数の法案が提出されている。他方、決議が行われる法案はその内の1割程度である。最終的は両院を通過した法案に大統領が署名を行なってはじめて法案が法律となる。したがって、本稿では審議の各段階、具体的には\textcircled{\scriptsize 1}法案提出、\textcircled{\scriptsize 2}議決、\textcircled{\scriptsize 3}立法化の3段階についてそれぞれ政策領域ごとの法案数を集計し、それぞれを従属変数とする分析を行った。\\
+　加えて、法案審議に見られる様々な傾向は法案の審議段階によっても異なると考えられる。アメリカ連邦議会には、例年数千件から一万件近い数の法案が提出されている。他方、決議が行われる法案はその内の1割程度である。最終的は両院を通過した法案に大統領が署名を行なってはじめて法案が法律となる。したがって、本稿では審議の各段階、具体的には\textcircled{\scriptsize 1}法案提出、\textcircled{\scriptsize 2}議決、\textcircled{\scriptsize 3}立法化の3段階についてそれぞれ政策領域ごとの法案数\footnote{本稿では法案数をBillとJoint Resolutionの合算値によって導出している。したがって、Simple ResolutinoとConccurent Resolutionは分析から除外されている。これは、立法化され得る議案が前者2種類のみであり、後者は制度上立法化できないためである。\citep*{US_Senate2020-xq}この操作化については、\citet*{Adler2013-ay}も同様の処理を行っっており、妥当であると思われる。}を集計し、それぞれを従属変数とする分析を行った。\\
+
 \subsubsection{独立変数}
 　本稿の独立変数は、政策領域に対する注目度である。本分析では、\citet*{Adler2013-ay}の議論を参考に2つの変数を用いて注目度を計測した。\\
+\paragraph*{メディア報道量}
 　第一に、メディアの報道量である。具体的にはNew York Timesの報道について、CAPが分類した政策領域ごとの報道量を計算している。\\
-　本分析では、メディア報道量の計算式を修正して用いている。これは、CAPの提示する計測方式では異なる年度間の比較を行う上で不適切であると考えられるからである。CAPによるメディア報道量の計測方法は、New York Times Indexの
+　本分析では、メディア報道量の計算式を修正して用いている。これは、CAPの提示する計測方式では異なる年度間の比較を行う上で不適切であると考えられるからである。CAPによるメディア報道量の計測方法は、New York Times Indexの奇数ページに記載された最初の記事をCAPの分類コードに従って分類している。コーディングされた各記事は、記事に付されている概要文の長さによって、長・中・短の3つに割り付けられており、単なる記事の本数ではなく、その重要性を加味することができる。\\
+　このサンプリング方法は、2つの面で複数年度の比較に適さない特性を有する。第一に、New York Times Indexは年度によってその全ページ数が異なるため、各記事の長さについての情報は異なる年度で単純な比較ができない。第二に、年度毎にページレイアウトが若干異なるため、ページ毎の記事数も年度によって異なっている。\\
+　年度ごとの政策領域毎の報道量を説明変数として用いる場合、最も簡単な操作化は、年度ごとの各政策領域における報道量を、記事の重みを加味して合算することである。この場合、政策領域$i$における報道量$MediaCoverage_i$は、記事の長さ$j = 1,2,3$と長さ$j$の記事数$entry_{ij}$によって表すことができる。\\
+\begin{align}
+  MediaCoverage_i =  \sum_{j=1}^3 entry_{ij}*j
+\end{align}
+しかし、上述した通り年度毎にNew York Times Indexのページ数やページ毎の記事数が異なるため、本来であれば、この両者を加味した形で操作化することが望ましい。したがって、本稿では、(1)式を年度$k$の全ページ数$NumOfPage_k$とページ毎記事数$PerPage_k$によって調整した値を報道量の計算んしきとして採用する。すなわち年度$k$における政策領域$i$の報道量は以下の式で表される。\\
+\begin{align}
+  MediaCoverage_{ik} = \frac{PerPage_k}{NumOfPage_k} \sum_{j=1}^3 entry_{ij}*j
+\end{align}
+端的に言えば本式は、(1)で導出される各記事の「長さ」を、その年のNew York Times Indexのページ数が多い場合にはより短く、その年の各ページに記載された記事が多い場合にはより長く評価した値である。
+
+\paragraph*{有権者の関心度合い}
+　政策領域に対する社会的な関心の度合いを示す第二の独立変数は有権者が各政策領域に対してどの程度関心を払っているのかという問題である。Gallup社は「今日この国が直面している最も重要な問題はなにか("the most important problem facing this country today.")」という質問を定期的に有権者に対し行っている。\citep*{Gallup_Inc2006-vs}\\
+　CAPはこのGallupによる定期的なサーベイの質問票を利用し、CAPが用意している政策領域それぞれについて有権者がどの程度関心を寄せているのかを年度ごとのデータとして用意している。本分析では、Gallup MIPで各政策領域が最も重要な争点であると答えた有権者の比率を有権者の各政策領域に対する関心度合いを示す指標として用いる。\\
+
 \subsubsection{統制変数}
-\subsection{モデル}
+　法案審議がどの程度行われるのかは、必ずしも社会的な要因によってのみ影響されるわけではない。特に独立変数との関係で統制すべきと判断される要素については統制変数として回帰式に投入した。\\
+　第一に、分割政府ダミーである。分割政府と統一政府とでは、立法生産に対して異なる状況が観察されることが指摘されてきた。\\
+　第二に、選挙年ダミーである。本分析では年度毎に提出された法案について集計した上で分析を行っている。中間選挙を含めた選挙年と非選挙年では提出される法案数に大きな乖離が存在する。そのため、連邦レベルの選挙が存在する年とそうでない年を区分するために選挙年ダミーを投入した。\\
+　第三に、政策領域ダミーを投入し、政策領域ごとの扱われやすさを統制している。例えば、マクロ経済と運輸とでは例年提出される法案数も有権者やメディアでの報道数にも差がある。政策領域を統制することで、これら所与の差異による影響を低減させる必要がある。\\
+　第四に、多数党ダミーを投入している。多数党が法案審議過程に対して影響力を行使していることはしばしば指摘される事実である。\citep*{Rohde1991-da,Aldrich1995-xf,Cox2005-pn,Cox2007-xq}したがって、法案審議の過程においても多数党によって提出された法案と、少数党によって提出された法案では異なる取り扱いがなされると考えることが妥当である。この点についてもダミー変数を投入して統制している。\\
+\subsection{分析モデル}
+　分析には単純な最小二乗法(OLS)を利用し、政策領域ごとの\textcircled{\scriptsize 1}法案提出数(上院/下院)、\textcircled{\scriptsize 2}議決に付された法案数(上院/下院)、\textcircled{\scriptsize 3}立法化された法案数を従属変数としたモデルについて上述の独立変数・統制変数を投入した分析を行った。\\
+
 \section{分析結果}
+ここに分析結果
+
+
+\begin{table}[]
+  \caption{House (Bill Introduction)}
+  %\centering
+  \hspace{-1cm}
+
+  \begin{tabular}[t]{lccc}
+    \toprule
+      & NYT v. Bill & MIP v. Bill & NYT + MIP v. Bill\\
+    \midrule
+    NYT Coverage & \num{0.862} &  & \num{0.026}\\
+    & (\num{0.701}) &  & (\num{0.991})\\
+    Gallup MIP &  & \num{85.433}* & \num{85.371}*\\
+    &  & (\num{0.015}) & (\num{0.016})\\
+    Divided Government (dummy) & \num{-1.972} & \num{-1.832} & \num{-1.836}\\
+    & (\num{0.567}) & (\num{0.592}) & (\num{0.593})\\
+    Bills from Majority Party (dummy) & \num{22.324}*** & \num{22.324}*** & \num{22.324}***\\
+    & (\num{0.000}) & (\num{0.000}) & \vphantom{1} (\num{0.000})\\
+    Major Topic & Yes & Yes & Yes\\
+    Election Year (dummy) & \num{-43.996}*** & \num{-44.021}*** & \num{-44.021}***\\
+    & (\num{0.000}) & (\num{0.000}) & (\num{0.000})\\
+    Num.Obs. & \num{841} & \num{841} & \num{841}\\
+    \midrule
+    AIC & \num{8878.7} & \num{8872.7} & \num{8874.7}\\
+    BIC & \num{9001.8} & \num{8995.8} & \num{9002.5}\\
+    Log.Lik. & \num{-4413.343} & \num{-4410.345} & \num{-4410.345}\\
+    F & \num{36.541} & \num{37.045} & \num{35.520}\\
+    RMSE & \num{46.71} & \num{46.54} & \num{46.57}\\
+    \bottomrule
+    \multicolumn{4}{l}{\rule{0pt}{1em}. p $<$ 0.1, * p $<$ 0.05, ** p $<$ 0.01, *** p $<$ 0.001}\\
+  \end{tabular}
+\end{table}
+
+　まず、法案提出について検討する。表1は、政策領域ごとに下院に提出された法案数を独立変数と統制変数を投入して回帰式を推定した点推定値である。まず指摘できるのは、下院に提出された法案では有権者の関心度合い(Gallup MIP)が一貫して有意に正の推定値を示している点である。これは、議会に対して提出される法案全体で見た場合に、有権者が関心を持っている争点が議会に反映されやすいことを示しており、議員が選挙区民に応答的に法案提出を行っているという既存の知見と整合的な結果である。\citep*{Page1983-bx,Monroe1998-ty,Burstein2003-vs}\\
+
+\begin{table}[htbp]
+
+  \caption{Senate (Bill Introduction)}
+  \centering
+  \begin{tabular}[t]{lccc}
+  \toprule
+    & NYT v. Bill & MIP v. Bill & NYT + MIP v. Bill\\
+  \midrule
+  NYT Coverage & \num{-0.860} &  & \num{-1.382}\\
+   & (\num{0.660}) &  & (\num{0.484})\\
+  Gallup MIP &  & \num{49.936} & \num{53.232}.\\
+   &  & (\num{0.101}) & (\num{0.084})\\
+  Divided Government (dummy) & \num{-4.935}. & \num{-5.058}. & \num{-4.850}\\
+   & (\num{0.100}) & (\num{0.090}) & (\num{0.105})\\
+  Bills from Majority Party (dummy) & \num{18.918}*** & \num{18.919}*** & \num{18.918}***\\
+   & (\num{0.000}) & (\num{0.000}) & \vphantom{1} (\num{0.000})\\
+  Major Topic & Yes & Yes & Yes\\
+  Election Year (dummy) & \num{-20.686}*** & \num{-20.697}*** & \num{-20.702}***\\
+   & (\num{0.000}) & (\num{0.000}) & (\num{0.000})\\
+  Num.Obs. & \num{839} & \num{839} & \num{839}\\
+  \midrule
+  AIC & \num{8622.2} & \num{8619.6} & \num{8621.1}\\
+  BIC & \num{8745.3} & \num{8742.7} & \num{8748.9}\\
+  Log.Lik. & \num{-4285.111} & \num{-4283.824} & \num{-4283.571}\\
+  F & \num{17.323} & \num{17.480} & \num{16.790}\\
+  RMSE & \num{40.59} & \num{40.53} & \num{40.54}\\
+  \bottomrule
+  \multicolumn{4}{l}{\rule{0pt}{1em}. p $<$ 0.1, * p $<$ 0.05, ** p $<$ 0.01, *** p $<$ 0.001}\\
+  \end{tabular}
+
+\end{table}
+
+
 
 \section{含意}
 
