--- a/writing/reference.bib
+++ b/writing/reference.bib
@@ -471,6 +471,38 @@
   year      =  1998
 }
 
+@ARTICLE{Burstein2003-vs,
+  title     = "The Impact of Public Opinion on Public Policy: A Review and an
+               Agenda",
+  author    = "Burstein, Paul",
+  abstract  = "This article considers the impact of public opinion on public
+               policy, asking: (1) how much impact it has; (2) how much the
+               impact increases as the salience of issues increases; (3) to
+               what extent the impact of public opinion may be negated by
+               interest groups, social movement organizations, political
+               parties, and elites; (4) whether responsiveness of governments
+               to public opinion has changed over time; and (5) the extent to
+               which our conclusions can be generalized. The source of data is
+               publications published in major journals and included in major
+               literature reviews, systematically coded to record the impact of
+               public opinion on policy. The major findings include: the impact
+               of public opinion is substantial; salience enhances the impact
+               of public opinion; the impact of opinion remains strong even
+               when the activities of political organizations and elites are
+               taken into account; responsiveness appears not to have changed
+               significantly over time; and the extent to which the conclusions
+               can be generalized is limited. Gaps in our knowledge made
+               apparent by the review are addressed in proposals for an agenda
+               for future research.",
+  journal   = "Polit. Res. Q.",
+  publisher = "SAGE Publications Inc",
+  volume    =  56,
+  number    =  1,
+  pages     = "29--40",
+  month     =  mar,
+  year      =  2003
+}
+
 @ARTICLE{Bussing2021-pb,
   title     = "Majority Party Agenda Setting: Picking Fights or Avoiding Them?",
   author    = "Bussing, A and Treul, S A",
@@ -791,6 +823,14 @@
   number   =  3,
   pages    = "689--700",
   year     =  2007
+}
+
+@MISC{Gallup_Inc2006-vs,
+  title        = "Most Important Problem",
+  author       = "{Gallup, Inc}",
+  year         =  2006,
+  howpublished = "\url{https://news.gallup.com/poll/14338/most-important-problem.aspx}",
+  note         = "Accessed: 2022-10-7"
 }
 
 @ARTICLE{Gray2019-sv,
@@ -1260,6 +1300,63 @@
               legislative voting"
 }
 
+@ARTICLE{Monroe1998-ty,
+  title     = "Public Opinion and Public Policy, 1980-1993",
+  author    = "Monroe, Alan D",
+  abstract  = "[To what extent have the policy decisions of the U.S. government
+               been consistent with the preferences of the public? Using
+               resluts of national surveys, public opinion was compared with
+               actual policy outcomes on over 500 issues from 1980 through
+               1993. Overall, policy outcomes were consistent with the
+               preferences of public majorities on 55 percent of the cases,
+               representing a decline from 63 percent during the 1960-79
+               period. While this decline extended to almost all substantive
+               policy topic categories analyzed, foreign policy decisions
+               tented to be among the most consistent (67 percent), as in the
+               previous two decades. Similar to the analysis of the earlier
+               period, it appeared that a key reson for policy not being more
+               consistent with public opinion was an inherent bias against
+               change in the U.S. political process, a tendency that has
+               increased over time. The reasons for this increase in bias
+               against change, and the corresponding decline in consistency,
+               are not entirely clear, but may be rooted in divided control of
+               government combined with increased ideological conflict. It is
+               interesting that when issues were categorized in terms of their
+               salience ot the public, it appeared that opinion/policy
+               consistency was greater (and bias against change less) on those
+               issues of highest public salience.]",
+  journal   = "Public Opin. Q.",
+  publisher = "[Oxford University Press, American Association for Public
+               Opinion Research]",
+  volume    =  62,
+  number    =  1,
+  pages     = "6--28",
+  year      =  1998
+}
+
+@ARTICLE{Page1983-bx,
+  title     = "Effects of Public Opinion on Policy",
+  author    = "Page, Benjamin I and Shapiro, Robert Y",
+  abstract  = "The responsiveness of government policies to citizens'
+               preferences is a central concern of various normative and
+               empirical theories of democracy. Examining public opinion and
+               policy data for the United States from 1935 to 1979, we find
+               considerable congruence between changes in preferences and in
+               policies, especially for large, stable opinion changes on
+               salient issues. We present evidence that pubic opinion is often
+               a proximate cause of policy, affecting policy more than policy
+               influences opinion. One should be cautious, however, about
+               concluding that democratic responsiveness pervades American
+               politics.",
+  journal   = "Am. Polit. Sci. Rev.",
+  publisher = "Cambridge University Press",
+  volume    =  77,
+  number    =  1,
+  pages     = "175--190",
+  month     =  mar,
+  year      =  1983
+}
+
 @ARTICLE{Patterson2020-rh,
   title     = "Parties, agendas, and roll rates",
   author    = "Patterson, Jr, S and Schwartz, T",
@@ -1587,6 +1684,17 @@
   year      =  2010
 }
 
+@MISC{US_Senate2020-xq,
+  title        = "Types of Legislation",
+  booktitle    = "United States Senate",
+  author       = "{U.S. Senate}",
+  abstract     = "Types of Legislation",
+  month        =  apr,
+  year         =  2020,
+  howpublished = "\url{https://www.senate.gov/legislative/common/briefing/leg_laws_acts.htm}",
+  note         = "Accessed: 2022-10-7"
+}
+
 @BOOK{Zahariadis2003-ck,
   title     = "Ambiguity and Choice in Public Policy: Political Decision Making
                in Modern Democracies",
@@ -1664,3 +1772,4 @@
   pages   = "55--90",
   year    =  2020
 }
+
