--- a/writing/main.tex
+++ b/writing/main.tex
@@ -97,7 +97,7 @@
 ここに分析結果
 
 
-\begin{table}[]
+\begin{table}[h]
   \caption{House (Bill Introduction)}
   %\centering
   \hspace{-1cm}
@@ -129,7 +129,9 @@
   \end{tabular}
 \end{table}
 
-　まず、法案提出について検討する。表1は、政策領域ごとに下院に提出された法案数を独立変数と統制変数を投入して回帰式を推定した点推定値である。まず指摘できるのは、下院に提出された法案では有権者の関心度合い(Gallup MIP)が一貫して有意に正の推定値を示している点である。これは、議会に対して提出される法案全体で見た場合に、有権者が関心を持っている争点が議会に反映されやすいことを示しており、議員が選挙区民に応答的に法案提出を行っているという既存の知見と整合的な結果である。\citep*{Page1983-bx,Monroe1998-ty,Burstein2003-vs}\\
+　まず、法案提出について検討する。表1は、政策領域ごとに下院に提出された法案数を独立変数と統制変数を投入して回帰式を推定した点推定値及び各推定値のp値である。まず指摘できるのは、下院に提出された法案では有権者の関心度合い(Gallup MIP)が一貫して有意に正の推定値を示している点である。これは、議会に対して提出される法案全体で見た場合に、有権者が関心を持っている争点が議会に反映されやすいことを示しており、議員が選挙区民に応答的に法案提出を行っているという既存の知見と整合的な結果である。\citep*{Page1983-bx,Monroe1998-ty,Burstein2003-vs}\\
+　次に、メディアによる報道の効果であるが、点推定値は正であるもののp値が大きく、有意とは言えない。
+　統制変数についてはおおよそ先行研究に整合的な推定値が導出されているといえる。分割政府ダミーの点推定値は負であるものの、有意ではない。これは、統一政府か否かが立法生産に対して明確な影響を及ぼさないとした\citet*{Mayhew1991-rq}の知見と整合的なものである。また、多数党によって提出される法案が少数党に比べて多いことも、多数党が議事運営に際して大きな影響力を維持していることから考えれば妥当なことであろう。\citep*{Sinclair2016-kh,Cox2005-pn,Cox2007-xq}
 
 \begin{table}[htbp]
 
